<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="TODO">TODO : </string>
    <string name="Notes">Notes : </string>
    <string name="Time">Date-Time : </string>

    <string name="Location">Location : </string>

    <string name="blank"></string>
    <string name="action_settings">Settings</string>
    <string name="new_reminders">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_show_reminder">ShowReminder</string>

    <string name="app_name">SmartReminder</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
