<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.anrlabs.reminders.ShowReminder">

    <TextView
        android:id="@+id/TV_TODO"
        android:text="@string/TODO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>
    <TextView android:text="@string/blank"
        android:id="@+id/TV_TODO_value"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/TV_TODO"/>
    <View
        android:layout_below="@id/TV_TODO"
        android:background="@android:color/darker_gray"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        />
    <TextView
        android:text="@string/Notes"
        android:textSize="15dp"
        android:textStyle="bold"

        android:id="@+id/TV_Notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_TODO"/>
    <TextView android:text="@string/blank"
        android:id="@+id/TV_NotesValue"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_TODO_value"
        android:layout_toRightOf="@id/TV_TODO"/>
    <View
        android:layout_below="@id/TV_Notes"
        android:background="@android:color/darker_gray"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        />
    <TextView android:text="@string/Time"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/TV_Times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_Notes"/>
    <TextView android:text="@string/blank"
        android:id="@+id/TV_Time_Value"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_NotesValue"
        android:layout_toRightOf="@id/TV_Times"/>
    <View
        android:layout_below="@id/TV_Times"
        android:background="@android:color/darker_gray"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        />
    <TextView
        android:text="@string/Location"
        android:textSize="15dp"
        android:textStyle="bold"
        android:id="@+id/TV_Location"
        android:layout_width="wrap_content"
        android:layout_height="60dip"

        android:layout_below="@id/TV_Times"/>
    <TextView
        android:text="@string/blank"
        android:id="@+id/TV_Location_Value"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_below="@id/TV_Time_Value"
        android:layout_toRightOf="@id/TV_Location"

        android:singleLine="false"/>
    <View
        android:layout_below="@id/TV_Location"
        android:background="@android:color/darker_gray"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        />
    <fragment

        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_below="@id/TV_Location"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
